# vaspera-os

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
config/: agents.yaml  products.yaml  secrets.example.yaml
scripts/: run_agents.py
src/: __init__.py
src/agents/: __init__.py  base.py
src/agents/market/: __init__.py  ads_agent.py  content_agent.py
src/agents/run/: __init__.py  monitor_agent.py
src/agents/support/: __init__.py  chat_agent.py
src/core/: __init__.py  events.py  orchestrator.py  scheduler.py
src/rules/: __init__.py  ads_rules.py  engine.py
